--- a/assets/fonts.scss
+++ b/assets/fonts.scss
@@ -14,3 +14,11 @@
   font-style: normal;
   font-display: swap;
 }
+@font-face {
+  font-family: "Font Awesome 6 Brands";
+  src: url("../assets/fonts/webfonts/fa-brands-400.woff2") format("woff2"),
+    url("../assets/fonts/webfonts/fa-brands-400.ttf") format("ttf");
+  font-weight: 400;
+  font-style: normal;
+  font-display: block;
+}
